Updated the repo organization

--- a/scripts/1_train/evaluate.ipynb
+++ b/scripts/1_train/evaluate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6113503f",
    "metadata": {},
    "outputs": [
@@ -25,9 +25,9 @@
     "from scipy.stats import pearsonr, spearmanr\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
     "\n",
-    "from mpralegnet.config import TrainingConfig\n",
-    "from mpralegnet.models.lightning_module import LitModel\n",
-    "from mpralegnet.data.utils import create_test_dataloader"
+    "from insilico_mpra.config import TrainingConfig\n",
+    "from insilico_mpra.models.lightning_module import LitModel\n",
+    "from insilico_mpra.data.utils import create_test_dataloader"
    ]
   },
   {
